--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Terrancus.github.io/Web.Portfolio",
+  "homepage": "http://Terrancus.github.io/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
